app/styles/layout/l-static-page.scss
@import '../settings';

.l-static-page {
  padding: 35px 0 60px;

  @media #{$mq-tablet} {
    padding: 85px 0;
  }

  :global .section-page {
    margin: 0 auto;
    padding: 85px 0;

    :global .section-title {
      margin: 0 0 30px;
    }
  }

  &.-faq {
    .question-group {
      :global .section-title {
        margin: 60px 0 0;
        padding: 60px 0;
        position: relative;

        &::after {
          background-color: $color-10;
          content: '';
          display: inline-block;
          height: 2px;
          left: 50%;
          position: absolute;
          top: 0;
          transform: translate(-50%, 0);
          width: 100vw;
        }
      }

      &:first-child {
        :global .section-title {
          margin: 0;

          &::after {
            content: none;
          }
        }
      }
    }
  }

  &.-articles-pubs {

    :global .section-page {
      padding: 0;
    }

    :global .section-title {
      margin: 0 0 5px;

      @media #{$mq-tablet} {
        margin: 0 0 60px;
      }
    }

    .grid {
      display: flex;
      flex-wrap: wrap;
    }
  }

  &.-definitions {
    :global .section-page {
      padding: 25px 0 0;

      @media #{$mq-tablet} {
        padding: 80px 0 0;
      }
    }
  }

  &.-tutorials {}

  &.-about {}

  &.-research-program {
    margin: 0 auto;
    max-width: 700px;

    .section-item {
      margin: 60px 0 55px;

      &:last-child {
        margin-bottom: 0;
      }
    }

    :global .section-subtitle {
      margin: 20px 0 5px;
    }

    .testimonial {
      & + .testimonial {
        margin-top: 65px;
      }
    }

    .testimonial > iframe {
      height: 390px;
      width: 100%;
    }

    .testimonial > .video-quote {
      margin: 30px 0 35px;
    }
  }
}

